[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vs_undistort"
version = "1.0.0"
description = "Vapoursynth function to remove video distortions, turbulance, wobble, warp, heat haze, or similar."
authors = [{ name = "pifroggi" }]

dependencies = [
	"torch",
    "numpy",
    "einops"
]

[tool.setuptools.package-data]
vs_undistort = ["*.pth"]

[project.urls]
Home-page = "https://github.com/pifroggi/vs_undistort"
Repository = "https://github.com/pifroggi/vs_undistort"
